<resources>
    <string name="app_name">Liber Al</string>
    <string name="ico_decs">Main icon</string>
    <string name="bsChap1">Chapter 1</string>
    <string name="bsChap2">Chapter 2</string>
    <string name="bsChap3">Chapter 3</string>
    <string name="menuCredits">Credits</string>
    <string name="menuExit">Exit</string>
    <string name="bsComm">Comment</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="uniHex">Unicursal Hexagram</string>
    <string name="headComment">Comments</string>
    <string name="comment">Do what thou wilt shall be the whole of the Law.\n\nThe study of this Book is forbidden. It is wise to destroy this copy after the first reading.\nWhosoever disregards this does so at his own risk and peril. These are most dire.\nThose who discuss the contents of this Book are to be shunned by all, as centres of pestilence.\nAll questions of the Law are to be decided only by appeal to my writings, each for himself.\nThere is no law beyond Do what thou wilt.\nLove is the law, love under will.\n\nThe priest of the princes,\nAnkh-f-n-khonsu</string>
    <string name="headChapOne">Chapter I</string>
    <string name="ChapOne">1. Had! The manifestation of Nuit.\n\n
2. The unveiling of the company of heaven.\n\n
3. Every man and every woman is a star.\n\n
4. Every number is infinite; there is no difference.\n\n
5. Help me, o warrior lord of Thebes, in my unveiling before the Children of men!\n\n
6. Be thou Hadit, my secret centre, my heart &amp; my tongue!\n\n
7. Behold! it is revealed by Aiwass the minister of Hoor-paar-kraat.\n\n
8. The Khabs is in the Khu, not the Khu in the Khabs.\n\n
9. Worship then the Khabs, and behold my light shed over you!\n\n
10. Let my servants be few &amp; secret: they shall rule the many &amp; the known.\n\n
11. These are fools that men adore; both their Gods &amp; their men are fools.\n\n
12. Come forth, o children, under the stars, &amp; take your fill of love!\n\n
13. I am above you and in you. My ecstasy is in yours. My joy is to see your joy.\n\n
14. Above, the gemmed azure is\n
The naked splendour of Nuit;\n
She bends in ecstasy to kiss\n
The secret ardours of Hadit.\n
The winged globe, the starry blue,\n
Are mine, O Ankh-af-na-khonsu!\n\n
15. Now ye shall know that the chosen priest &amp; apostle of infinite space is the prince-priest the Beast; and in his woman called the Scarlet Woman is all power given. They shall gather my children into their fold: they shall bring the glory of the stars into the hearts of men.\n\n
16. For he is ever a sun, and she a moon. But to him is the winged secret flame, and to her the stooping starlight.\n\n
17. But ye are not so chosen.\n\n
18. Burn upon their brows, o splendrous serpent!\n\n
19. O azure-lidded woman, bend upon them!\n\n
20. The key of the rituals is in the secret word which I have given unto him.\n\n
21. With the God &amp; the Adorer I am nothing: they do not see me. They are as upon the earth; I am Heaven, and there is no other God than me, and my lord Hadit.\n\n
22. Now, therefore, I am known to ye by my name Nuit, and to him by a secret name which I will give him when at last he knoweth me. Since I am Infinite Space, and the Infinite Stars thereof, do ye also thus. Bind nothing! Let there be no difference made among you between any one thing &amp; any other thing; for thereby there cometh hurt.\n\n
23. But whoso availeth in this, let him be the chief of all!\n\n
24. I am Nuit, and my word is six and fifty.\n\n
25. Divide, add, multiply, and understand.\n\n
26. Then saith the prophet and slave of the beauteous one: Who am I, and what shall be the sign? So she answered him, bendingdown, a lambent flame of blue, all-touching, all penetrant, her lovely hands upon the black earth, &amp; her lithe body arched for love, and her soft feet not hurting the little flowers: Thou knowest! And the sign shall be my ecstasy, the consciousness of the continuity of existence, the omnipresence of my body.\n\n
27. Then the priest answered &amp; said unto the Queen of Space, kissing her lovely brows, and the dew of her light bathing his whole body in a sweet-smelling perfume of sweat: O Nuit, continuous one of Heaven, let it be ever thus; that men speak not of Thee as One but as None; and let them speak not of thee at all, since thou art continuous!\n\n
28. None, breathed the light, faint &amp; faery, of the stars, and two.\n\n
29. For I am divided for love\'s sake, for the chance of union.\n\n
30. This is the creation of the world, that the pain of division is as nothing, and the joy of dissolution all.\n\n
31. For these fools of men and their woes care not thou at all! They feel little; what is, is balanced by weak joys; but ye are my chosen ones.\n\n
32. Obey my prophet! follow out the ordeals of my knowledge! seek me only! Then the joys of my love will redeem ye from all pain. This is so: I swear it by the vault of my body; by my sacred heart and tongue; by all I can give, by all I desire of ye all.\n\n
33. Then the priest fell into a deep trance or swoon, &amp; said unto the Queen of Heaven; Write unto us the ordeals; write unto us the rituals; write unto us the law!\n\n
34. But she said: the ordeals I write not: the rituals shall be half known and half concealed: the Law is for all.\n\n
35. This that thou writest is the threefold book of Law.\n\n
36. My scribe Ankh-af-na-khonsu, the priest of the princes, shall not in one letter change this book; but lest there be folly, he shall comment thereupon by the wisdom of Ra-Hoor-Khuit.\n\n
37. Also the mantras and spells; the obeah and the wanga; the work of the wand and the work of the sword; these he shall learn and teach.\n\n
38. He must teach; but he may make severe the ordeals.\n\n
39. The word of the Law is THELEMA.\n\n
40. Who calls us Thelemites will do no wrong, if he look but close into the word. For there are therein Three Grades, the Hermit, and the Lover, and the man of Earth. Do what thou wilt shall be the whole of the Law.\n\n
41. The word of Sin is Restriction. O man! refuse not thy wife, if she will! O lover, if thou wilt, depart! There is no bond that can unite the divided but love: all else is a curse. Accursed! Accursed be it to the aeons! Hell.\n\n
42. Let it be that state of manyhood bound and loathing. So with thy all; thou hast no right but to do thy will.\n\n
43. Do that, and no other shall say nay.\n\n
44. For pure will, unassuaged of purpose, delivered from the lust of result, is every way perfect.\n\n
45. The Perfect and the Perfect are one Perfect and not two; nay, are none!\n\n
46. Nothing is a secret key of this law. Sixty-one the Jews call it; I call it eight, eighty, four hundred &amp; eighteen.\n\n
47. But they have the half: unite by thine art so that all disappear.\n\n
48. My prophet is a fool with his one, one, one; are not they the Ox, and none by the Book?\n\n
49. Abrogate are all rituals, all ordeals, all words and signs. Ra-Hoor-Khuit hath taken his seat in the East at the Equinox of the Gods; and let Asar be with Isa, who also are one. But they are not of me. Let Asar be the adorant, Isa the sufferer; Hoor in his secret name and splendour is the Lord initiating.\n\n
50. There is a word to say about the Hierophantic task. Behold! there are three ordeals in one, and it may be given in three ways. The gross must pass through fire; let the fine be tried in intellect, and the lofty chosen ones in the highest. Thus ye have star &amp; star, system &amp; system; let not one know well the other!\n\n
51. There are four gates to one palace; the floor of that palace is of silver and gold; lapis lazuli &amp; jasper are there; and all rare scents; jasmine &amp; rose, and the emblems of death. Let him enter in turn or at once the four gates; let him stand on the floor of the palace. Will he not sink? Amn. Ho! warrior, if thy servant sink? But there are means and means. Be goodly therefore: dress ye all in fine apparel; eat rich foods and drink sweet wines and wines that foam! Also, take your fill and will of love as ye will, when, where and with whom ye will! But always unto me.\n\n
52. If this be not aright; if ye confound the space-marks, saying: They are one; or saying, They are many; if the ritual be not ever unto me: then expect the direful judgments of Ra Hoor Khuit!\n\n
53. This shall regenerate the world, the little world my sister, my heart &amp; my tongue, unto whom I send this kiss. Also, o scribe and prophet, though thou be of the princes, it shall not assuage thee nor absolve thee. But ecstasy be thine and joy of earth: ever To me! To me!\n\n
54. Change not as much as the style of a letter; for behold! thou, o prophet, shalt not behold all these mysteries hidden therein.\n\n
55. The child of thy bowels, he shall behold them.\n\n
56. Expect him not from the East, nor from the West; for from no expected house cometh that child. Aum! All words are sacred and all prophets true; save only that they understand a little; solve the first half of the equation, leave the second unattacked. But thou hast all in the clear light, and some, though not all, in the dark.\n\n
57. Invoke me under my stars! Love is the law, love under will. Nor let the fools mistake love; for there are love and love. There is the dove, and there is the serpent. Choose ye well! He, my prophet, hath chosen, knowing the law of the fortress, and the great mystery of the House of God.\n\n
All these old letters of my Book are aright; but [Tzaddi] is not the Star. This also is secret: my prophet shall reveal it to the wise.\n\n
58. I give unimaginable joys on earth: certainty, not faith, while in life, upon death; peace unutterable, rest, ecstasy; nor do I demand aught in sacrifice.\n\n
59. My incense is of resinous woods &amp; gums; and there is no blood therein: because of my hair the trees of Eternity.\n\n
60. My number is 11, as all their numbers who are of us. The Five Pointed Star, with a Circle in the Middle, &amp; the circle is Red. My colour is black to the blind, but the blue &amp; gold are seen of the seeing. Also I have asecret glory for them that love me.\n\n
61. But to love me is better than all things: if under the night stars in the desert thou presently burnest mine incense before me, invoking me with a pure heart, and the Serpent flame therein, thou shalt come a little to lie in my bosom. For one kiss wilt thou then be willing to give all; but whoso gives one particle of dust shall lose all in that hour. Ye shall gather goods and store of women and spices; ye shall wear rich jewels; ye shall exceed the nations of the earth in splendour &amp; pride; but always in the love of me, and so shall ye come to my joy. I charge you earnestly to come before me in a single robe, and covered with a rich headdress. I love you! I yearn to you! Pale or purple, veiled or voluptuous, I who am all pleasure and purple, and drunkenness of the innermost sense, desire you. Put on the wings, and arouse the coiled splendour within you: come unto me!\n\n
62. At all my meetings with you shall the priestess say em dash and her eyes shall burn with desire as she stands bare and rejoicing in my secret temple em dash To me! To me! calling forth the flame of the hearts of all in her love-chant.\n\n
63. Sing the rapturous love-song unto me! Burn to me perfumes! Wear to me jewels! Drink to me, for I love you! I love you!\n\n
64. I am the blue-lidded daughter of Sunset; I am the naked brilliance of the voluptuous night-sky.\n\n
65. To me! To me!\n\n
66. The Manifestation of Nuit is at an end.</string>
    <string name="headChapTwo">Chapter II</string>
    <string name="headChapThree">Chapter III</string>
</resources>